# HasCal

./: HasCal.cabal  LICENSE  README.md  default.nix  shell.nix
.github/workflows/: main.yml
doctest/: Main.hs
src/: HasCal.hs
src/HasCal/: Coroutine.hs  Expression.hs  Property.hs  Temporal.hs
tasty/HasCal/Test/: API.hs  AsyncInterface.hs  ConcurrentInvariant.hs  DieHard.hs  DiningPhilosophers.hs  EuclidAlg.hs  FIFO.hs  FastMutex.hs  Flags.hs  Hanoi.hs  HourClock.hs  InternalMemory.hs  Market.hs  Trade.hs  Transfer.hs
