cabal-version:      3.0
name:               HasCal
version:            1.0.0
synopsis:           Haskell embedding of PlusCal
bug-reports:        https://github.com/Gabriel439/HasCal/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gabriella Gonzalez
maintainer:         Gabriel439@gmail.com
copyright:          2021 Gabriella Gonzalez

library
    exposed-modules:  HasCal
                    , HasCal.Coroutine
                    , HasCal.Property
    build-depends:    base >=4.14.3.0 && < 5
                    , exceptions
                    , hashable
                    , list-transformer
                    , microlens-platform
                    , mtl
                    , prettyprinter
                    , profunctors
                    , safe-exceptions
                    , text
                    , transformers
                    , unordered-containers
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: Haskell2010

test-suite tasty
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base >=4.14.3.0 && < 5
                    , HasCal
                    , tasty
                    , tasty-expected-failure
                    , tasty-hunit
                    , tasty-discover
    other-modules:    HasCal.Test.AsyncInterface
                    , HasCal.Test.EuclidAlg
                    , HasCal.Test.Flags
                    , HasCal.Test.FastMutex
                    , HasCal.Test.Hanoi
                    , HasCal.Test.Trade
                    , HasCal.Test.Transfer
    hs-source-dirs:   tasty
    ghc-options:      -Wall
    default-language: Haskell2010
